--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/vue": "^3.0.0",
     "@headlessui/vue": "^1.7.16",
+    "@tailwindcss/forms": "^0.5.6",
     "astro": "^3.1.2",
     "tailwindcss": "^3.0.24",
+    "thumbhash": "^0.1.1",
     "vue": "^3.2.30"
   },
   "devDependencies": {
+    "@divriots/jampack": "^0.20.2",
     "@vicons/material": "^0.12.0",
     "naive-ui": "^2.34.4",
     "vfonts": "^0.0.3"
