--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/vue": "^3.0.0",
     "@headlessui/vue": "^1.7.16",
+    "@heroicons/vue": "^1.0.6",
     "@tailwindcss/forms": "^0.5.6",
     "astro": "^3.1.2",
+    "esbuild": "^0.19.4",
+    "flag-icons": "^6.11.1",
     "tailwindcss": "^3.0.24",
     "thumbhash": "^0.1.1",
     "vue": "^3.2.30"
