--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@divriots/jampack": "^0.20.2",
     "@vicons/material": "^0.12.0",
+    "emailjs-com": "^3.2.0",
     "naive-ui": "^2.34.4",
     "vfonts": "^0.0.3"
   }
