--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/vue": "^3.0.0",
+    "@emailjs/browser": "^3.11.0",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^1.0.6",
     "@tailwindcss/forms": "^0.5.6",
@@ -25,7 +26,6 @@
   "devDependencies": {
     "@divriots/jampack": "^0.20.2",
     "@vicons/material": "^0.12.0",
-    "emailjs-com": "^3.2.0",
     "naive-ui": "^2.34.4",
     "vfonts": "^0.0.3"
   }
