--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "flag-icons": "^6.11.1",
     "tailwindcss": "^3.0.24",
     "thumbhash": "^0.1.1",
-    "vue": "^3.2.30"
+    "vue": "^3.2.30",
+    "vue-carousel": "^0.18.0"
   },
   "devDependencies": {
     "@divriots/jampack": "^0.20.2",
