--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "astro": "^3.3.0",
     "esbuild": "^0.19.4",
     "flag-icons": "^6.11.1",
+    "sharp": "^0.32.6",
     "tailwindcss": "^3.3.3",
     "thumbhash": "^0.1.1",
     "vue": "^3.3.4",
